examples/test/testpolicy18617.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18617
  namespace: namespace110
spec:
  podSelector:
    matchLabels:
      key49: value25
      key8: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value41
          key27: value14
          key45: value18
      podSelector:
        matchLabels:
          key7: value24
          key32: value23
